@@ -3,16 +3,10 @@
 
 #include <windows.h>
 
+DWORD rOpenKey(HKEY hReg, const wchar_t *Name, HKEY &hKey);
 LONG rSetValue(HKEY hReg, const wchar_t *VName, DWORD val);
 LONG rSetValue(HKEY hReg, const wchar_t *VName, DWORD Type, const void *Data, DWORD Len);
-DWORD rGetValue(HKEY hReg, wchar_t *name);
-DWORD rGetValue(HKEY hReg, const wchar_t *name, wchar_t *Data, DWORD Len);
-HKEY rOpenKey(HKEY hReg, const wchar_t *Name);
-HKEY rOpenKeyEx(HKEY hReg, const wchar_t *Name);
-DWORD rCheckAndSet(HKEY hReg, const wchar_t *Name, DWORD Val);
-DWORD rCheckAndSet(HKEY hReg, const wchar_t *Name, DWORD Type, wchar_t* Data, DWORD Len);
-
-wchar_t *rGetValueSz(HKEY hReg, const wchar_t *name);
-DWORD rGetValueDw(HKEY hReg, wchar_t *name);
+wchar_t *rGetValueSz(HKEY hReg, const wchar_t *name, const wchar_t *DefaultValue);
+DWORD rGetValueDw(HKEY hReg, const wchar_t *name, DWORD DefaultValue);
 
 #endif
