@@ -1,7 +1,16 @@
+#revision 1302
+	ctapmex 04.02.2010 23:40
+	1. рефакторинг работы с реестром
+		а) уберем отрицание из имен параметров. 
+		б) define заменены на константы
+		в) добавлены значения по умолчанию для параметров
+		г) функции для чтения параметров принимают значение по умолчанию
+		д) функция для записи всех настроек по умолчанию
+
 #revision 1299
 	ctapmex 04.02.2010 12:13
 	1. поправлены valid тесты
-	2. устанавливаем версию плагинов в 1.0.2.2 и собираем релиз
+	2. устанавливаем версию плагинов в 1.0.2.4 и собираем релиз
 	3. сборка схем. тесты проходят на 100%
 	4. файл истории изменения FarColor
 
